--- a/4-CRUD/crud_project/personas/templates/lista.html
+++ b/4-CRUD/crud_project/personas/templates/lista.html
@@ -26,7 +26,7 @@
                   <td>{{persona.apellido}}</td>
                   <td>{{persona.edad}}</td>
                   <td>
-                    <a href="">Editar</a> | <a href="">Eliminar</a>
+                    <a href="{% url 'editar_persona' persona.id %}">Editar</a> | <a href="{% url 'eliminar_persona' persona.id %}">Eliminar</a>
                     </td>
               <tr>
                 {% endfor %}
